# cropter

./: CMakeLists.txt  README.md
GPIO/: CMakeLists.txt  ModuleGPIOTest.cpp
RIFT/: CMakeLists.txt  RIFT_demo.cpp  cudaFunc.cu  cudaFunc.h  phase.cpp  phase.h  rift_no_rotation_invariance.cpp  rift_no_rotation_invariance.h
cameraIR/: CMakeLists.txt  Guide612.cpp  Guide612.h  Guide612Test.cpp  LiteRingBuffer.cpp  LiteRingBuffer.h
cameraIR/include/: guideusb2livestream.h  measure.h
cameraVIS/: CMakeLists.txt  LiteGstCamera.cpp  LiteGstCamera.h  cameraVIS.cpp  cameraVISTest.cpp
deprecated/RIFT_cza/: CMakeLists.txt  RIFT_demo.cpp  bfprt.cpp  bfprt.h  clear_images.sh  phase.cpp  phase.h  rift_no_rotation_invariance.cpp  rift_no_rotation_invariance.h
deprecated/bfprt/: CMakeLists.txt  bfprtTest.cpp
detection/: CMakeLists.txt  myCudaResize.cu  myCudaResize.h  yololayer.cu  yololayer.h  yolov5.cpp  yolov5.h  yolov5_demo.cpp
fusion/: CMakeLists.txt  IFCNN.cpp  IFCNN.h  IFCNN_demo.cpp  myCudaConvert.cu  myCudaConvert.h
modules/: CMakeLists.txt  LiteRingBuffer.cpp  LiteRingBuffer.h  ModuleCamera.cpp  ModuleCamera.h  ModuleDetection.cpp  ModuleDetection.h  ModuleFusion.cpp  ModuleFusion.h  ModuleGPIO.cpp  ModuleGPIO.h  ModuleI2C.cpp  ModuleI2C.h  ModuleRIFT.cpp  ModuleRIFT.h  ModuleTemplate.cpp  ModuleTemplate.h
saved_image/: clear_images.sh
sht/: CMakeLists.txt  sensirion_i2c.c  shtc3.c  shtc3.h  shtc3_test.c
test/: CMakeLists.txt  integrate.cpp  integrate.h  test.cpp  test1.cpp  test2_integrate.cpp  test3_temper_rectify.cpp
